--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,20 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: ${SHOW_SQL:false}
+  security:
+    user:
+      name: root
+      password: root
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/migrostest${DB_PARAMS:?allowPublicKeyRetrieval=true&useSSL=false}
     username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:123987123}
+    password: ${DB_PASSWORD:root}
 
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
 
 springfox:
   documentation:
@@ -34,7 +43,8 @@ spring:
   datasource:
     url: jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/migrostest${DB_PARAMS:?allowPublicKeyRetrieval=true&useSSL=false}
     username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:123987123}
+    password: ${DB_PASSWORD:root}
+
 
 ### Dev Profile
 ---
